--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,18 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title>StarGazers</title>
+  <title>{{title}}</title>
 </head>
 <body class="d-flex flex-column min-vh-100"> 
 
 <main class="container">
-<p><img src="/images/group.svg" alt="StarGazers"></p>
-<p>The Stargazers are members of the <em>Intergalactic Alliance</em> paving the way for peace and benevolence among all species. They are known for their enthusiasm for science, for their love of fun, and their dedication to education.</p>
-<h1>Communication</h1>
-<p>Stargazers are fluent in <strong>JavaScript</strong>, so once you connect to their network, simply type in a message into their console.</p>
-<pre><code class="language-js">console.log(&quot;Take me to your leader&quot;);
-</code></pre>
-
+{{ content | safe }}
 </main>
 
 </body>
