--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -7,6 +7,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
+ 
+    {% include "navigation.njk" %}
+
     <main class="container">
      {{ content | safe }}
     </main>
